# libdetectproxy

./: CMakeLists.txt  README.md  detect_proxy.cpp  detect_proxy.hpp
detectproxy/: detectproxy.cpp  detectproxy.hpp  detectproxy.ipp
test/: test_1.cpp  test_2.cpp
